# notification-bot

./: .gitignore  Justfile  main.py  pyproject.toml
notifier/: __init__.py  config.py  kleinanzeigen.py  known_keys.py  logging.py  notify.py  offer.py
notifier/apartments/: __init__.py  immowelt.py  kleinanzeigen.py  offer.py
scraper/: config.py  kleinanzeigen.py  telegram.py
