[tool.poetry]
name = "scraper"
version = "0.0.1"
description = "A scraper of mine"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
#repository = "https://github.com/nukesor/ultimate-poll-bot"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1"
beautifulsoup4 = "^4"
python-telegram-bot = {extras = ["job-queue"], version = "^20.1"}
python-dateutil = "^2"
requests = "^2"
typer = "^0.9"
tomli-w = "^1"

[tool.poetry.dev-dependencies]
autoflake = "^2"
black = { version = "*", allow-prereleases = true }
flake8 = "^6"
isort = "^5"
pytest = "^7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"
