[tool.poetry]
name = "notifier"
version = "0.0.1"
description = "A telegram notifier of mine"
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
#repository = "https://github.com/nukesor/ultimate-poll-bot"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1"
beautifulsoup4 = "^4"
python-telegram-bot = {extras = ["job-queue"], version = "^20.1"}
python-dateutil = "^2"
requests = "^2"
typer = "^0.9"
tomli-w = "^1"

[tool.poetry.dev-dependencies]
ruff = "^0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
exclude = [
    ".venv",
    "__init__.py",
]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "F", # Pyflakes
    "I", # Isort
    "UP", # Language feature updates
    "RUF", # Ruff Rules
]
fixable = [
    "E",
    "F",
    "I",
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
